@@ -1,3 +1,12 @@
+2008-02-12  Wim Taymans  <wim.taymans@collabora.co.uk>
+
+	* gst/mpegvideoparse/mpegvideoparse.c:
+	(mpegvideoparse_handle_sequence), (mpegvideoparse_drain_avail),
+	(gst_mpegvideoparse_change_state):
+	Fix leaking caps.
+	Fix potential buffer leak in forward mode.
+	Cleanup queues when going to READY. Fixes #515815.
+
 2008-02-12  Sebastian Dröge  <slomo@circular-chaos.org>
 
 	* docs/plugins/gst-plugins-bad-plugins-docs.sgml:
